--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@
     border: 1px solid var(--bs-primary);
 }
 
+.btn-primary:focus {
+    background-color: var(--bs-primary);
+    border-color: var(--bs-primary);
+    box-shadow: none;
+}
+
 /*** Icon Animation Start ***/
 @keyframes icon-animat {
     0%  {border-radius: 67% 33% 29% 71% / 39% 46% 54% 61%;}
